fix: add postversion hook

--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "pretest": "npm run lint -- --fix",
     "test": "node --test --experimental-strip-types",
     "preci": "npm run lint",
-    "ci": "npm run prepublishOnly",
-    "prepublishOnly": "tsc -b --clean && tsc && node dist/bin.js",
+    "ci": "npm run prepublishOnly && npm run postversion",
+    "postversion": "node dist/bin.js",
+    "prepublishOnly": "tsc -b --clean && tsc",
     "prepare": "husky"
   },
   "lint-staged": {
