--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "node --test --experimental-strip-types",
     "preci": "npm run lint",
     "ci": "npm run prepublishOnly && npm run postversion",
-    "postversion": "npm run prepublishOnly && node dist/bin.js",
+    "postversion": "npm run prepublishOnly && node dist/bin.js && git add .",
     "prepublishOnly": "tsc -b --clean && tsc",
     "prepare": "husky"
   },
