--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,10 @@ on:
 jobs:
   release-to-npm:
     name: NPM
-    uses: node-modules/github-actions/.github/workflows/node-release.yml@master
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+    uses: node-modules/github-actions/.github/workflows/npm-release.yml@npm-trusted-publish
+    with:
+      action_ref: npm-trusted-publish
+      dryRun: true
 
   release-to-jsr:
     name: JSR
