fix: add GIT_TOKEN

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ jobs:
   release-to-npm:
     name: NPM
     uses: node-modules/github-actions/.github/workflows/npm-release.yml@master
+    secrets:
+      GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
 
   release-to-jsr:
     name: JSR
