fix: remove --experimental-strip-types

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "lint": "oxlint",
     "pretest": "npm run lint -- --fix",
-    "test": "node --test --experimental-strip-types",
+    "test": "node --test",
     "preci": "npm run lint",
     "ci": "npm run prepublishOnly && npm run postversion",
     "postversion": "npm run prepublishOnly && node dist/bin.js && git add jsr.json",
