--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -52,7 +52,7 @@
     "no-undefined": "allow",
     "no-plusplus": "allow",
     // maybe warn
-    "no-console": "warn",
+    "no-console": "allow",
     "no-extraneous-class": "allow",
     "no-empty-function": "allow",
     "max-depth": ["error", 6],
