--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
   "devDependencies": {
     "@eggjs/tsconfig": "3",
     "@types/node": "24",
-    "c8": "10",
     "husky": "9",
-    "mm": "4",
-    "oxlint": "1",
+    "oxlint": "^1.11.0",
     "prettier": "3",
     "typescript": "5"
   },
@@ -51,10 +49,10 @@
   "files": [
     "dist"
   ],
-  "type": "module",
   "bin": {
     "sync-npm-version-to-jsr": "dist/bin.js"
   },
+  "type": "module",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts"
 }
